--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           <h2>Search results</h2>
           <ul id="results-list">
           </ul>
+          <ul id="youtube-list">
+
+          </ul>
+          <ul id="news-list"></ul>
         </section>
     </div>
     <script src="index.js"></script>
