initial functunality pass done

--- a/index.html
+++ b/index.html
@@ -8,30 +8,66 @@
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="container">
-        <h1>New Interests</h1>
-        <form id="js-form">
-            <label for="search-term">Enter your favorite author, book, movie, game, tv show, podcast</label>
-            <input type="text" name="search-term" id="js-search-term" required>
+    <header class="site-header">
+        <div class="container">
+            <div class="row">
+                <h2 id="logo-text">New Interests</h2>
+                <a href="JavaScript:void(0);" id="how-to-use">How to use</a>
+            </div>
+            
+        </div>
+    </header>
+    <section id="instructions" class="hidden overlay">
+        <div class="overlay-content container">
+            <a class="close-modal" href="JavaScript:void(0);" aria-roledescription="close modal">X</a>
+            <h2>How to use</h2>
+            <p>Enter your favorite author, game, book, movie, podcast, or show.  You can enter in multiple at the same time seperated by a comma(,).  If one thing shares a title between different types you can also specify type by adding in the type followed by a colon before your search term ex. show:Game of Thrones</p>
+            <p>Once you've got your results, click on the name and you'll see some related news articles and YouTube videos to learn more about them!</p>
+        </div>
+    </section>
+    <section id="taste-search">   
+        <div class="container">
+            <h1>New Interests</h1>
+            <form id="js-form">
+                <label for="search-term">Enter your favorite author, book, movie, game, tv show, podcast</label>
+                <input type="text" name="search-term" id="js-search-term" required>
 
-            <label for="max-results">Maximum results to return</label>
-            <input type="number" name="max-results" id="js-max-results" value="10">
+                <label for="max-results">Maximum results to return</label>
+                <input type="number" name="max-results" id="js-max-results" value="10">
 
-            <input type="submit" value="Go!">
-        </form>
+                <input type="submit" value="Go!">
+            </form>
 
-        <p id="js-error-message" class="error-message"></p>
-        <section id="results" class="hidden">
-          <h2>Search results</h2>
-          <ul id="results-list">
-          </ul>
-          <ul id="youtube-list">
+            <p id="js-error-message" class="error-message"></p>
+        </div>
+    </section>
+    <section id="results" class="hidden">
+        <h2>Search results</h2>
+        <ul id="results-list">
+        </ul>
+    </section>
+    <section id="more-info" class="hidden overlay">
+        <div class="overlay-content">
+            <a class="close-modal" href="JavaScript:void(0);" aria-roledescription="close modal">X</a>
+            <div id="more-description">
+            </div>
+            <div class="row">
+                <div class="width50">
+                    <h2>YouTube Videos</h2>
+                    <ul id="youtube-list">
+                    </ul>
+                </div>
+                <div class="width50">
+                    <h2>Most Recent News</h2>
+                    <ul id="news-list">
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
-          </ul>
-          <ul id="news-list"></ul>
-        </section>
-    </div>
     <script src="index.js"></script>
 </body>
 </html>
