changed how to use

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
         </div>
     </header>
-    <section id="instructions" class="hidden overlay">
+    <section id="instructions" class="hidden">
         <div class="overlay-content container">
             <a class="close-modal" href="JavaScript:void(0);" aria-roledescription="close modal">X</a>
             <h2>How to use</h2>
@@ -30,7 +30,7 @@
     <section id="taste-search">   
         <div class="container">
             <h1>Find New Interests</h1>
-            <p>Using your favorite author, book, movie, game, tv show, or podcast, we'll give you a list of similar things to explore!</p>
+            
             <form id="js-form">
                 <label for="search-term">Enter your favorite author, book, movie, game, tv show, or podcast</label>
                 <input type="text" name="search-term" id="js-search-term" required>
