testing video player

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section id="instructions" class="hidden">
         <div class="overlay-content container">
-            <a class="close-modal" href="JavaScript:void(0);" aria-roledescription="close modal">X</a>
+            <!--<a class="close-modal" href="JavaScript:void(0);" aria-roledescription="close modal">X</a>-->
             <h2>How to use</h2>
             <p>Enter your favorite author, game, book, movie, podcast, or show.  You can enter in multiple at the same time seperated by a comma.  If one thing shares a title between different types you can also specify type by adding in the type followed by a colon before your search term ex. show:Game of Thrones</p>
             <p>Once you've got your results, click on the name and you'll see some related news articles and YouTube videos to learn more about them!</p>
