--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="landing-banner">
                 <div class="cover-text">
                     <h2>Enter your favorite</h2>
-                    <h2>Author, Book, Movie, TV Show or Podcast</h2>
+                    <h2>Author, Book, Movie, Game, TV Show or Podcast</h2>
                     <form id="js-form" autocomplete="off">
                         <input type="text" name="search-term" id="js-search-term" required>
                         <div class="row">
